puts middle control button in a div and applies style to the div as applying the style to the button is flaky - also adds a height to the countdown timer to hopefully prevent the control buttons from overlapping with it on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,7 @@
   display: flex;
   flex-direction: 'row';
   justify-content: center;
+  height: 10rem;
 }
 
 #countdown-background {
@@ -31,10 +32,13 @@
 }
 
 #control-btns {
-  margin-top: 0.5rem;
   display: flex;
   flex-direction: 'row';
   justify-content: center;
+}
+
+.control-button {
+  margin: 0 0.5rem;
 }
 
 #completedPomodoros {
